--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
           <label for="initialDeposit">Initial Deposit</label>
           <input type="text" class="form-control" id="initialDeposit" >
         </div>
+        <button id="submit" type="submit" class="btn btn-info">Submit</button>
+
 
         <div class="depositWithdraw">
         <h3>Deposit or Withdraw funds</h3>
@@ -39,7 +41,6 @@
 
  <!-- <button type="submit" class="btn btn-primary" id="dw">Deposit or Withdraw</span> -->
 
-        <button id="submit" type="submit" class="btn btn-info">Submit</button>
       </form>
 <!-- RESULTS START HERE -->
       <div class="results">
@@ -51,6 +52,7 @@
       <div class="showName">
         <p>Name: <span class="name1"></span></p>
         <p>Balance: <span class="balance1"></span></p>
+        <p>Balance: <span class="newBalance1"></span></p>
 
       </div>
 
