create withdraw and deposit prototypes.

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       <div class="showName">
         <p>Name: <span class="name1"></span></p>
         <p>Balance: <span class="balance1"></span></p>
-        <p>Balance: <span class="newBalance1"></span></p>
+        <p>New Balance: <span class="newBalance1"></span></p>
 
       </div>
 
